@@ -1,6 +1,7 @@
 New features, changes and fixes since previous release
 ===========================================================
 * NEW 'set xtics rangelimit' allows creation of range/frame plots
+* FIX interpolatation for pm3d surfaces given by both z and colour coordinates
 
 
 New features, changes and fixes in gnuplot version 4.2.4
